Sort by date and fix groupby category

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,11 +20,13 @@
         <button type="submit">Continue</button>
     </form>
 
+    <h2>Total:  {{ sum_text }}</h2>
     <h2>Categories:</h2>
     <pre>{{ categories_text }}</pre>
-    <h2>Transactions:</h2>
-    <pre>{{ transactions_text }}</pre>
     <h2>Grouped By Category:</h2>
     <pre>{{ grouped_categories }}</pre>
+    <h2>Transactions:</h2>
+    <pre>{{ transactions_text }}</pre>
+
 </body>
 </html>
