--- a/templates/index.html
+++ b/templates/index.html
@@ -5,28 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Budget Processing Tool</title>
+    <style>
+        .container {
+          display: flex;
+        }
+    
+        .column {
+          flex: 1;
+          padding: 10px;
+        }
+    </style>    
 </head>
 <body>
-    <h2>Input / Output Files:</h2>
-    <form action="/" method="post">
-        <label for="num_days">Days:</label>
-        <input type="number" id="num_days" name="num_days" value="{{ num_days }}" required>
-        <br>
-
-        <label for="transaction_path">Transaction Directory Path:</label>
-        <input type="text" id="transaction_path" name="transaction_path" value="{{ transaction_path }}" required>
-        <br>
-
-        <button type="submit">Continue</button>
-    </form>
-
-    <h2>Total:  {{ sum_text }}</h2>
-    <h2>Categories:</h2>
-    <pre>{{ categories_text }}</pre>
-    <h2>Grouped By Category:</h2>
-    <pre>{{ grouped_categories }}</pre>
-    <h2>Transactions:</h2>
-    <pre>{{ transactions_text }}</pre>
-
+    <div>
+        <h1>Date Range</h1>
+        <h2>{{ date_range_text }}</h2>
+        <form action="/" method="post">
+            <label for="num_days">Days:</label>
+            <input type="number" id="num_days" name="num_days" value="{{ num_days }}" required>
+            <br>
+    
+            <label for="transaction_path">Transaction Directory Path:</label>
+            <input type="text" id="transaction_path" name="transaction_path" value="{{ transaction_path }}" required>
+            <br>
+    
+            <button type="submit">Continue</button>
+        </form>
+        <h2>Total:  {{ sum_text }}</h2>
+        <h2>Categories:</h2>
+        <pre>{{ categories_text }}</pre>    
+    </div>
+    <div class="container">
+        <div class="column">
+            <h2>Grouped By Category:</h2>
+            <pre>{{ grouped_categories }}</pre>    
+        </div>
+        <div class="column">
+            <h2>Transactions:</h2>
+            <pre>{{ transactions_text }}</pre>
+        </div>    
+    </div>
 </body>
 </html>
