--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Budget Processing Tool</title>
+    <title>Expenses Processing Tool</title>
     <style>
         .container {
           display: flex;
