--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,12 @@
     <div>
         <h2>{{ date_range_text }}</h2>
         <form action="/" method="post">
-            <label for="num_days">Days:</label>
-            <input type="number" id="num_days" name="num_days" value="{{ num_days }}" required>
+            <label for="start_date">Days:</label>
+            <input type="date" id="start_date" name="start_date" value="{{ start_date }}" required>
+            <br>
+
+            <label for="end_date">Days:</label>
+            <input type="date" id="end_date" name="end_date" value="{{ end_date }}" required>
             <br>
     
             <label for="transaction_path">Transaction Directory Path:</label>
