--- a/templates/index.html
+++ b/templates/index.html
@@ -52,5 +52,11 @@
             <pre>{{ transactions_text }}</pre>
         </div>    
     </div>
+    <div class="container">
+        <div class="column">
+            <h2>Payment Per Day:</h2>
+            <pre>{{ daily_transactions_text }}</pre>    
+        </div>
+    </div>    
 </body>
 </html>
